--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -193,14 +193,26 @@
 
     <Button
         android:id="@+id/op_eq"
-        android:layout_width="150dp"
+        android:layout_width="80dp"
         android:layout_height="80dp"
         android:backgroundTint="@color/medium_grey"
         android:text="="
         android:textColor="@color/black"
         android:textSize="25sp"
-        app:layout_constraintEnd_toStartOf="@id/op_plus"
+        app:layout_constraintEnd_toStartOf="@id/op_ac"
         app:layout_constraintStart_toEndOf="@id/num_zero"
+        app:layout_constraintTop_toTopOf="@id/num_zero" />
+
+    <Button
+        android:id="@+id/op_ac"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:backgroundTint="@color/medium_grey"
+        android:text="AC"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@id/op_plus"
+        app:layout_constraintStart_toEndOf="@id/op_eq"
         app:layout_constraintTop_toTopOf="@id/num_zero" />
 
     <Button
@@ -212,7 +224,7 @@
         android:textColor="@color/black"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/op_eq"
+        app:layout_constraintStart_toEndOf="@id/op_ac"
         app:layout_constraintTop_toTopOf="@id/num_zero" />
 
     <Button
